WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
186886
[WPE][ThreadedRendering] WPE crashes rendering some pieces of text when using ThreadedRendering
https://bugs.webkit.org/show_bug.cgi?id=186886
Summary
[WPE][ThreadedRendering] WPE crashes rendering some pieces of text when using...
Miguel Gomez
Reported
2018-06-21 03:25:46 PDT
As an optimization, FontCascade may render some glyphs to a DisplayList and then replay that list instead of rendering again. But when replaying, the glyphs are not rendered through a GraphicsContext as we would expect, but using FontCascade directly. In the cairo case this means that FontCascade requires a cairo context to render, but if we are in the recording phase of the rendering there's no platform context and we have the crash.
Attachments
Patch
(8.66 KB, patch)
2018-06-21 03:34 PDT
,
Miguel Gomez
no flags
Details
Formatted Diff
Diff
Patch
(8.62 KB, patch)
2018-06-22 01:03 PDT
,
Miguel Gomez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Miguel Gomez
Comment 1
2018-06-21 03:34:51 PDT
Created
attachment 343231
[details]
Patch
Miguel Gomez
Comment 2
2018-06-22 01:03:45 PDT
Created
attachment 343313
[details]
Patch
WebKit Commit Bot
Comment 3
2018-06-22 02:50:01 PDT
Comment on
attachment 343313
[details]
Patch Clearing flags on attachment: 343313 Committed
r233075
: <
https://trac.webkit.org/changeset/233075
>
WebKit Commit Bot
Comment 4
2018-06-22 02:50:03 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug