[WPE][ThreadedRendering] WPE crashes rendering some pieces of text when using ThreadedRendering https://bugs.webkit.org/show_bug.cgi?id=186886

Reviewed by Žan Doberšek.

Modify DisplayList DrawGlyphs element to use a GraphicsContext for replaying. To do so, modify
GraphicsContext::drawGlyphs() API so it doesn't require a FontCascade, and update all the calls
to it.

Covered by existent tests.

* platform/graphics/FontCascade.cpp:
(WebCore::FontCascade::drawGlyphBuffer const):
* platform/graphics/GraphicsContext.cpp:
(WebCore::GraphicsContext::drawGlyphs):
* platform/graphics/GraphicsContext.h:
* platform/graphics/displaylists/DisplayListItems.cpp:
(WebCore::DisplayList::DrawGlyphs::apply const):
* rendering/mathml/MathOperator.cpp:
(WebCore::MathOperator::paintGlyph):
(WebCore::MathOperator::paint):
* rendering/mathml/RenderMathMLToken.cpp:
(WebCore::RenderMathMLToken::paint):


Canonical link: https://commits.webkit.org/202170@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@233075 268f45cc-cd09-0410-ab3c-d52691b4dbfc